--- a/Static Mock Up/converterStyles.css
+++ b/Static Mock Up/converterStyles.css
@@ -14,7 +14,7 @@ body {
     width: 90%;
     height: 50px;
     margin: 10px auto;
-    background-color: #EBAC4E;
+    background-color: #ff9f0a;
     color: rgb(76, 76, 76);
     padding: 5px;
     border-radius: 8%;
@@ -39,7 +39,7 @@ body {
 }
 
 .converterScreenSelect {
-    background-color: #EBAC4E;
+    background-color: #ff9f0a;
     color: rgb(76, 76, 76);
     height: fit-content;
     border-radius: 10%;
@@ -68,7 +68,7 @@ body {
 }
 
 button.converterAccent {
-    background-color: #EBAC4E;
+    background-color: #ff9f0a;
     font-size: 24px;
     color: dimgray;
     padding: 5px;
