--- a/Static Mock Up/styles.css
+++ b/Static Mock Up/styles.css
@@ -6,7 +6,7 @@ body {
   
 
   .calculator {
-    background-color: #a0a0a0;
+    background-color: #777777;
     padding: 20px;
     border-radius: 20px;
     display: flex;
@@ -16,7 +16,7 @@ body {
   }
     .screen {
       background-color: #000;
-      color: #fff;
+      color: dimgray;
       padding: 20px;
       padding-bottom: 80px;
       border-radius: 20px;
@@ -30,7 +30,7 @@ body {
     .navbar {
       display: flex;
       justify-content: space-around;
-      background-color: #d0d0d0;
+      background-color: dimgray;
       padding: 10px;
       border-radius: 20px;
       margin-bottom: 20px;
@@ -51,7 +51,7 @@ body {
       gap: 20px;
     }
     .button {
-      background-color: #d4d2d5;
+      background-color: #D9D9D9;
       border: none;
       padding: 30px;
       border-radius: 50%;
@@ -59,7 +59,7 @@ body {
       justify-content: center;
       align-items: center;
       font-size: 1.5em;
-      color: #000;
+      color: dimgray;
       cursor: pointer;
       user-select: none;
     }
@@ -68,6 +68,6 @@ body {
       border-radius: 40px;
     }
     .button.orange {
-      background-color: #ff9f0a;
+      background-color: #EBAC4E;
       color: #fff;
     }
